--- a/index.tex
+++ b/index.tex
@@ -334,7 +334,7 @@ the shape of graphs of linear functions of one variable, e.g.
 \(f(x) = a x + b\), but the algebraic meaning rests on the following two
 general properties:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 A \emph{linear transformation} or \emph{linear operator} is a mapping
 \(L\) between two sets of vectors with the following properties:
@@ -413,7 +413,7 @@ unchanged.
 The notion of linearity leads to the important idea of combining
 different vectors:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 A \emph{linear combination} of \(n\) vectors \(\{ \vec v_i \}\) is a
 weighted sum of these vectors with any real numbers \(\{a_i\}\): \[ 
@@ -429,7 +429,7 @@ vector that is related to the original set. Linear combinations give a
 simple way of generating new vectors, and thus invite the following
 definition for a collection of vectors closed under linear combinations:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 A \emph{vector space} is a collection of vectors such that a linear
 combination of any \(n\) vectors is contained in the vector space.
@@ -457,7 +457,7 @@ combinations of vectors. It turns out that it is possible to generate
 of its vectors. The challenge is to find a minimal subset of subset that
 is not redundant. In order to do this, we first introduce a new concept:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 A set of vectors \(\{ \vec v_i \}\) is called \emph{linearly
 independent} if the only linear combination involving them that equals
@@ -475,7 +475,7 @@ the plane is linearly dependent, because there are only two dimensions
 in the vector space. This brings us to the key definition of this
 section:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 A \emph{basis} of a vector space is a linearly independent set of
 vectors that generate (or span) the vector space. The number of vectors
@@ -607,7 +607,7 @@ together with others.
 The second step is to compute the variance-covariance matrix of the
 \(N\) variables.
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 The \emph{variance-covariance} matrix \(C\) of a data set \(X\) with
 \(n\) variables \(x_i\) and \(m\) observations is an \(n\) by \(n\)
@@ -628,7 +628,7 @@ This is accomplished by choosing a subset of \(k\) principal components
 with the largest eigenvalues. Here are the steps of principal component
 analysis (PCA):
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{PCA algorithm}, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-tip-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{PCA algorithm}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -702,7 +702,7 @@ C = D \times P
 
 Here is the outline for the transformation:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Dimensionality reduction}, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-tip-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Dimensionality reduction}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -783,7 +783,7 @@ function within a certain interval on the \(x\)-axis, to a desired
 tolerance. We assume only that we can evaluate the function at any given
 value of \(x\). Here is the outline of the algorithm:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -832,7 +832,7 @@ the resulting triplet is also divided in the same proportion. This is
 the condition for the golden ratio (that the ratio of the larger segment
 to the whole is the same as the ratio of the smaller segment to the
 larger). Thus, the the choice for the new point is
-\(x_4 = x_1 + (x_3 - x_1)/\phi\), where \(\phi = (1 + √5)/2\).
+\(x_4 = x_1 + (x_3 - x_1)/\phi\), where \(\phi = (1 + \sqrt 5)/2\).
 Similarly, if the interval \((x_2,x_3)\) is larger, we pick
 \(x_4 = x_3 - (x_3 - x_1)/\phi\).
 
@@ -861,7 +861,7 @@ source}}
 
 \end{figure}%
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Golden section search}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -889,7 +889,7 @@ Secant method is also a root-finding method, and can thus be used to
 find optima of functions with a computable derivative. If the derivative
 function is f(x), then the algorithm is:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Secant algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Secant algorithm}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -941,13 +941,13 @@ indicate higher-order terms that we will ignore, for sufficiently small
 \(\Delta x\). Now, suppose the function has a root (zero) at \(x_0\), so
 \(f(x_0) = 0\). Then, if we are at a point near the root,
 \(x_0 + \Delta x\), we can calculate how far away it is from the root,
-by simply solving for \(\Delta x  = f(x_0 + \Delta x) /  f'(x_0)\). The
+by simply solving for \(\Delta x = f(x_0 + \Delta x) / f'(x_0)\). The
 idea of Newton's method is to find the step size needed to reach the
 root, by using the value of the derivative at the current point
 \(x_0 + \Delta x\) (assuming the points are close enough that the slopes
 are almost equal). Then the steps for the algorithm are:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Newton-Raphson algorithm in 1 dimension}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Newton-Raphson algorithm in 1 dimension}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1050,7 +1050,7 @@ above, if sliced in the \(x\) or \(y\) direction.
 This allows us to define the multi-dimensional equivalent of the
 derivative: the \emph{gradient} of a function,
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 The \emph{gradient} of a function \(f(\vec x)\) of multiple variables
 \(\vec x = x_1, .., x_n\) is a vector with \(n\) components, each one
@@ -1063,7 +1063,7 @@ the partial derivative with respect to the corresponding variable:
 To gain some geometric intuition about gradients, let us introduce the
 notion of contours of \(f(\vec x)\)
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 The \emph{contours} or \emph{level curves} of a function \(f(\vec x)\)
 of multiple variables \(\vec x = x_1, .., x_n\) are sets of values of
@@ -1109,7 +1109,7 @@ takes steps in the direction of the gradient, until the point is
 sufficiently close to the bottom of the valley. This is called the
 method of \emph{gradient descent}:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Gradient descent algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Gradient descent algorithm}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1125,7 +1125,7 @@ method of \emph{gradient descent}:
   the multiple found by the one-dimensional search.
 \item
   Repeat until \(|| \vec x_{i+1} - \vec x_i || < \epsilon_{tol}\), where
-  \(\epsilon_{tol}\) is the specified tolerance
+  \(\epsilon_{tol}\) is the specified tolerance.
 \end{enumerate}
 
 \end{tcolorbox}
@@ -1147,7 +1147,7 @@ where the gradient function plays the role of the derivative in the
 1-dimensional Newton's method. In order for this to work, we need an
 equivalent to the second derivative as well.
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 For a function \(f(\vec x)\) of a vector variable \(\vec x\) with \(n\)
 components, the \emph{Hessian} is a \(n\) by \(n\) matrix, with each
@@ -1187,7 +1187,7 @@ Now that we have the multi-variable equivalents of \(f'(x)\) and
 \(f''(x)\), we can formulate the multidimensional Newton-Raphson
 algorithm using vectors and matrices:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Multi-variable Newton-Raphson algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Multi-variable Newton-Raphson algorithm}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1230,7 +1230,7 @@ method dominates. Here is an outline of the algorithm, which starts with
 a large value of \(\lambda\), assuming that the initial guess
 \(\vec x_0\) is far from the minimum:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Levenberg-Marquardt algorithm}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Levenberg-Marquardt algorithm}, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1298,7 +1298,7 @@ is not periodic, and in which we are interested over the whole real
 line. To achieve that, we generalize the notion of a Fourier series from
 a sum to an integral:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 Forward Fourier transform: \[
 G(f) =   \int_{-\infty}^\infty g(x) e^{i2\pi f x}dx
@@ -1324,7 +1324,7 @@ I believe this is purely a matter of convention. Second, mathematicians
 prefer to define the Fourier transform and the inverse transform as
 follows:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{(Alternative) definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{(Alternative) definition}, colback=white]
 
 Forward Fourier transform: \[
 G(\omega) = \int_{-\infty}^\infty g(x) e^{i \omega x}dx
@@ -1432,9 +1432,8 @@ Thus, the functions \(h(x)= e^{-ax^2}\) and
 \(\widehat h(f) = \sqrt\frac{\pi}{a} e^{- \frac{\pi^2}{a}f^2}\) are a
 Fourier pair. If we choose \(a = \pi\), you see that the exponentials of
 the two functions match, and the constant in \(\widehat h(f)\) reduces
-to unity. The Gaussian function \$ e\textsuperscript{\{-\pi x}2\}\$ is
-its own Fourier transform, not too wide, not too narrow - the Goldilocks
-function.
+to unity. The Gaussian function \(e^{-\pi x^2}\) is its own Fourier
+transform, not too wide, not too narrow - the Goldilocks function.
 
 \section{Convolution and Fourier
 Transform}\label{convolution-and-fourier-transform}
@@ -1442,7 +1441,7 @@ Transform}\label{convolution-and-fourier-transform}
 We now come to one more special property of the Fourier Transform which
 is useful in many different applications.
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Definition}, colback=white]
 
 The \emph{convolution} of two functions is defined as follows:
 
@@ -1458,7 +1457,7 @@ Thus, you can think about this integral as follows: for every number
 Some important properties of the convolution, which can be easily shown
 by writing down the integral definition:
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title={Properties of convolutions}, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-tip-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-tip-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title={Properties of convolutions}, colback=white]
 
 \begin{itemize}
 \tightlist
@@ -1469,10 +1468,10 @@ by writing down the integral definition:
   \(h \circ (g \circ f) = (h \circ g) \circ f\)
 \item
   convolution of two functions is distributive:
-  \(h \circ (g + f) = h  \circ f + h \circ f\)
+  \(h \circ (g + f) = h \circ f + h \circ f\)
 \item
-  convolution preserves shifts (translations): if \(f = h  \circ  g\),
-  then \(f(x-a) = h(x-a) \circ  g = h  \circ  g (x-a)\)
+  convolution preserves shifts (translations): if \(f = h \circ g\),
+  then \(f(x-a) = h(x-a) \circ g = h \circ g (x-a)\)
 \end{itemize}
 
 \end{tcolorbox}
@@ -1504,7 +1503,7 @@ h(x) \circ g(x) = \int _{-\infty} ^\infty h(x)  dx
 The reason why the convolution is so central to the application of
 Fourier Transforms is the following.
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, coltitle=black, bottomrule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, arc=.35mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Convolution Theorem}, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, toptitle=1mm, opacitybacktitle=0.6, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, leftrule=.75mm, titlerule=0mm, breakable, bottomrule=.15mm, arc=.35mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, left=2mm, toptitle=1mm, rightrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Convolution Theorem}, colback=white]
 
 The Fourier transform has the following special property with
 convolutions:
@@ -1668,12 +1667,12 @@ lack of well-defined peaks, and an overall unstructured appearance.
 pattern}\label{synthesis-fourier-transform-of-crystal-diffraction-pattern}
 
 One important application of Fourier transforms is to optical
-scattering. Any time a light is scattered by an object, it results in a
+scattering. Any time light is scattered by an object, it results in a
 Fourier transform of the image of the object, and if enough photons are
 scattered, one can get a pretty complete picture. In the visible range,
 we can use lenses, such as in our eyes or in microscopes, to essentially
 perform the inverse Fourier transform. In X-ray crystallography, which
-is the primary tool for determining structures of biological molecules,
+is the primary tool for determining structures of biological molecules
 it is not possible, because no optical lenses can interact with photons
 of that wavelength. We are left to perform the inverse Fourier
 transforms computationally.
@@ -1723,7 +1722,7 @@ vicinity of the initial guess. Here is the outline of the method:
   new state. Thus, if \(f(\vec x_{i+1}) > f(\vec x_i)\), accept the new
   state with probability \(P = e^{f(\vec x_{i-1}) - f(\vec x_i)}\).
 \item
-  Repeat until the algorithm no longer seems to improve the predictions:
+  Repeat until the algorithm no longer improves the objective function:
   usually, until a maximum number of consecutive rejections is reached.
 \end{enumerate}
 
@@ -1745,7 +1744,7 @@ which the variables have only discrete domains. A famous example is the
 optimal order of visiting \(N\) cities, with optimal meaning the order
 with the lowest total distance traveled. This seemingly simple problem
 has no efficient algorithm for solving it exactly - it belongs to a
-class of problems known as ``NP-complete'\,' (I will not attempt to
+class of problems known as ``NP-complete'' (I will not attempt to
 explain the terminology here). All exact methods for solving the TSP are
 as inefficient as the brute force method of considering every possible
 order of visiting the cities, calculating the total distance of each,
@@ -2153,25 +2152,36 @@ separately, and each matrix multiplication is a multiplication by the
 appropriate eigenvalue. Thus,
 
 \[ 
-P_t = M^t P_0 =   1^t \left(\begin{array}{c} 1/4 \\ 1/4 \\ 1/4 \\ 1/4 \end{array}\right) + (1-4/3\alpha)^t\left( \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right) +  \left(\begin{array}{c} 1/4 \\ -1/4 \\ -1/4 \\ 1/4 \end{array}\right) + \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right) \right)
-\] The first element of \(P_t\) is the probability of a nucleotide
+P_t = M^t P_0 =   1^t \left(\begin{array}{c} 1/4 \\ 1/4 \\ 1/4 \\ 1/4 \end{array}\right) + (1-\frac{4}{3}\alpha)^t\left( \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right) +  \left(\begin{array}{c} 1/4 \\ -1/4 \\ -1/4 \\ 1/4 \end{array}\right) + \left(\begin{array}{c} 1/4 \\ -1/4 \\ 1/4 \\ -1/4 \end{array}\right) \right)
+\]
+
+The first element of \(P_t\) is the probability of a nucleotide
 remaining \(A\) after \(t\) generation, and it is:
-\(P_t (A ) = 1/4 +3/4(1-4/3\alpha)\^t\). For \(t=0\), the probability is
-1, as it should be, and as \(t \rightarrow \infty\),
-\(P_t (A) \rightarrow 1/4\), since this is the equilibrium probability
-distribution. Note that the expression is the same for all the other
-letters, so we have found the expression for any nucleotide remaining
-the same after \(t\) generations.
+
+\[
+P_t(A) = \frac{1}{4} + \frac{3}{4}\left(1-\frac{4}{3}\alpha\right)^t
+\]
+
+For \(t=0\), the probability is 1, as it should be, and as
+\(t \rightarrow \infty\), \(P_t(A) \rightarrow 1/4\), since this is the
+equilibrium probability distribution. Note that the expression is the
+same for all the other letters, so we have found the expression for any
+nucleotide remaining the same after \(t\) generations.
 
 Now let us get to the question of calculating the time that two
 sequences have evolved from each other. Denote by \(m\) the fraction of
 sites in two aligned sequences with different letters, and \(q\) is the
 probability of a nucleotide remaining the same, which is the given by
 the expression for \(P_t(A)\). Thus
-\(m = 1 - q = 3/4 - 3/4(1-4/3\alpha)^t\). This can be solved for \(t\):
+
+\[
+m = 1 - q = \frac{3}{4} - \frac{3}{4}\left(1-\frac{4}{3}\alpha\right)^t
+\].
+
+This can be solved for \(t\):
 
 \[ 
-t = \frac{\log (1 - 4/3 m)}{\log (1 -4/3 \alpha)}
+t = \frac{\log (1 - \frac{4}{3}m)}{\log (1 - \frac{4}{3} \alpha)}
 \]
 
 However, we do not necessarily know the mutation rate \(\alpha\), so
@@ -2188,12 +2198,12 @@ mutation, and cause the sequence to revert to its initial letter.
 Now, let us assume \(\alpha\) is small, as typically the number of
 substitutions per generation per nucleotide is small. Then, by a Taylor
 expansion of the logarithm around 1,
-\(\log (1 -4/3 \alpha) \approx - 4/3\alpha\). Using the formula for
-\(t\) from above with this approximation, we find the Jukes-Cantor
-phylogenetic distance to be:
+\(\log (1 -\frac{4}{3} \alpha) \approx - \frac{4}{3}\alpha\). Using the
+formula for \(t\) from above with this approximation, we find the
+Jukes-Cantor phylogenetic distance to be:
 
 \[ 
-d_{JC} = \frac{\log (1 - 4/3 m)}{ -4/3 \alpha} \alpha =  -\frac{3}{4}\log (1 - 4/3 m)
+d_{JC} = \frac{\log (1 - \frac{4}{3}m)}{ - \frac{4}{3} \alpha} \alpha =  -\frac{3}{4}\log (1 - \frac{4}{3} m)
 \]
 
 This formula has the correct behavior in the two limits: when \(m = 0\),
